fix scrollbar

--- a/lain-website/app/blog/Blog.module.css
+++ b/lain-website/app/blog/Blog.module.css
@@ -1,9 +1,13 @@
 .container {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 2rem;
+    width: 100%;
     height: 100vh;
     overflow-y: auto;
+    padding: 4rem 2rem;
+}
+
+.inner {
+    max-width: 900px;
+    margin: 0 auto;
 }
 
 .articles {
